--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "sqlite3": "^4.0.6",
+    "sqlstring": "^2.3.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
